Closed
Bug 607092
Opened 15 years ago
Closed 15 years ago
valgrind code can trigger fascist compiler warnings for newer gcc versions
Categories
(Tamarin Graveyard :: Virtual Machine, defect)
Tamarin Graveyard
Virtual Machine
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: stejohns, Unassigned)
Details
Attachments
(1 file)
|
1.26 KB,
patch
|
lhansen
:
review+
|
Details | Diff | Splinter Review |
Seen on certain Flash-for-Android builds:
cc1plus: warnings being treated as errors
../../../third_party/avmplus/MMgc/GCLargeAlloc.cpp: In member function 'void* MMgc::GCLargeAlloc::Alloc(size_t, size_t, int)':
../../../third_party/avmplus/MMgc/GCLargeAlloc.cpp:114: error: logical '&&' with non-zero constant will always evaluate as true
This is alarmingly stupid, but easier to rework the code in this case that to fight with the build system in question.
Attachment #485854 -
Flags: review?(treilly)
| Reporter | ||
Comment 1•15 years ago
|
||
Comment on attachment 485854 [details] [diff] [review]
Patch
Shifting review to Lars since Tommy is out today.
Attachment #485854 -
Flags: review?(treilly) → review?(lhansen)
Updated•15 years ago
|
Attachment #485854 -
Flags: review?(lhansen) → review+
| Reporter | ||
Comment 2•15 years ago
|
||
TR: 5391:907929c0fe6f
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Comment 3•15 years ago
|
||
this would be more succinct, but would it also suppress the warning?
if ((flags & GC::kZero) != 0 && !RUNNING_ON_VALGRIND)
You need to log in
before you can comment on or make changes to this bug.
Description
•