Bug 607092 - valgrind code can trigger fascist compiler warnings for newer gcc versions (r=lhansen)